--- a/index.html
+++ b/index.html
@@ -4,15 +4,11 @@
     <meta charset="utf-8">
     <title>Knows Pickers</title>
     <link rel="stylesheet" href="styles.css">
-    <script type="text/javascript" src="Map.js"></script>
   </head>
   <body>
     <h2>Knows Pickers</h2>
     <h4>(for those who know)</h4>
     <div id="map"></div>
-    <script type="text/javascript" src="index.js"></script>
-    <script 
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA99nF4WLsPeygHrRoJOTRH1Bk5DBJjoyg">
-    </script>
+    <script src="index.js"></script>
   </body>
 </html>
