Updated notes.md to relfect changes in Class names and Reach goals.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h2>Knows Pickers</h2>
-    <h4>(for those who know)</h4>
+    <div id="title">
+      <h2>Knows Pickers</h2>
+      <div id="subtitle">
+      <h4>(for those who know)</h4>
+      </div>
+    </div>
     <div id="map"></div>
     <script src="index.js"></script>
+    <footer>
+      <p>property of azharshahstl@yahoo.com 2020</p>
+    </footer>
   </body>
 </html>
