Added Address Button and did some styling to the page

--- a/index.html
+++ b/index.html
@@ -12,8 +12,16 @@
       <h4>(for those who know)</h4>
       </div>
     </div>
-    <div id="map"></div>
+    <main>
+      <div id="map">
+
+      </div>
+      <div id="addressButton">
+
+      </div>
+    </main>
     <script src="index.js"></script>
+    
     <footer>
       <p>property of azharshahstl@yahoo.com 2020</p>
     </footer>
