--- a/index.html
+++ b/index.html
@@ -9,13 +9,22 @@
     <div id="title">
       <h2>Knows Pickers</h2>
       <h4>(for those who know)</h4>
+      <p>Hover over a marker to see the items available at that address and click on the marker to load the items to the right of the map.</p>
     </div>
     <main>
-      <div id="map">
-
-      </div>
+      <div id="map"></div>
       <div id="addressButton">
-
+        <form id="create-address-form" action="#" method="post">
+          <label for="street-number">Street Number:</label>
+          <input type="text" id="street-number" name="street_number" placeholder="ex. 1187 Hunterwasser"></br>
+          <label for="city">City:</label>
+          <input type="text" id="city" name="city" value="St. Louis"></br>
+          <label for="state">State:</label>
+          <input type="text" id="state" name="state" value="Missouri"></br>
+          <label for="zip-code">Zip Code:</label>
+          <input type="text" id="zip-code" name="zip_code" placeholder="63116"></br>
+          <input type="submit" value="Add Address">
+        </form>
       </div>
     </main>
     <script src="index.js"></script>
