--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <main>
       <div id="map"></div>
       <div id="addressButton">
+      </div>
+      <div id="form">
         <form id="create-address-form" action="#" method="post">
           <label for="street-number">Street Number:</label>
           <input type="text" id="street-number" name="street_number" placeholder="ex. 1187 Hunterwasser"></br>
