Added cancel button to address form and even listener on click

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       </div>
       <div id="form">
         <form id="create-address-form" action="#" method="post">
+          <h4>Fill Out the Form Below:</h4>
           <label for="street-number">Street Number:</label>
           <input type="text" id="street-number" name="street_number" placeholder="ex. 1187 Hunterwasser"></br>
           <label for="city">City:</label>
@@ -25,7 +26,9 @@
           <input type="text" id="state" name="state" value="Missouri"></br>
           <label for="zip-code">Zip Code:</label>
           <input type="text" id="zip-code" name="zip_code" placeholder="63116"></br>
-          <input type="submit" value="Add Address">
+        </br>
+          <input id="add-button" type="submit" value="Add Address">
+          <input id="cancel-button" type="submit" value="Cancel">
         </form>
       </div>
     </main>
