Recreated migrations, trying to get Address form to mark addresses correctly

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         <form id="create-address-form" action="#" method="post">
           <h4>Fill Out the Form Below:</h4>
           <label for="street-number">Street Number:</label>
-          <input type="text" id="street-number" name="street_number" placeholder="ex. 1187 Hunterwasser"></br>
+          <input type="text" id="street-number" name="street_number" placeholder="ex. 1187"></br>
+          <label for="street-name">Street Name:</label>
+          <input type="text" id="street-name" name="street_name" placeholder="Hunterwasser Ave."></br>
           <label for="city">City:</label>
           <input type="text" id="city" name="city" value="St. Louis"></br>
           <label for="state">State:</label>
@@ -33,6 +35,8 @@
       </div>
     </main>
     <script src="index.js"></script>
+    <script src="address.js"></script>
+    <script src="item.js"></script>
     
     <footer>
       <p>property of azharshahstl@yahoo.com 2020</p>
