--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div id="title">
       <h2>Knows Pickers</h2>
       <h4>(for those who know)</h4>
-      <p>Hover over a marker to see the items available at that address and click on the marker to load the items to the right of the map.</p>
+      <p>You can hover over a marker to see the items available at that address and click on the marker to load the items to the right of the map.</p>
     </div>
     <main>
       <div id="map"></div>
