Removed city and state from Migrations, updated serializer, html, index.js and address.js to reflect this

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
           <input type="text" id="street-number" name="street_number" placeholder="ex. 1187"></br>
           <label for="street-name">Street Name:</label>
           <input type="text" id="street-name" name="street_name" placeholder="Hunterwasser Ave."></br>
-          <label for="city">City:</label>
+          <!-- <label for="city">City:</label>
           <input type="text" id="city" name="city" value="St. Louis"></br>
           <label for="state">State:</label>
-          <input type="text" id="state" name="state" value="Missouri"></br>
+          <input type="text" id="state" name="state" value="Missouri"></br> -->
           <label for="zip-code">Zip Code:</label>
           <input type="text" id="zip-code" name="zip_code" placeholder="63116"></br>
         </br>
