Added items form function

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div id="addressButton">
       </div>
       <div id="form">
-        <form id="create-address-form" action="#" method="post">
+        <form class="form" id="create-address-form" action="#" method="post">
           <h4>Fill Out the Form Below:</h4>
           <label for="street-number">Street Number:</label>
           <input type="text" id="street-number" name="street_number" placeholder="ex. 1187"></br>
@@ -29,6 +29,7 @@
           <input id="cancel-button" type="submit" value="Cancel">
         </form>
       </div>
+      <div id="item-form"></div>
     </main>
     <script src="index.js"></script>
     <script src="address.js"></script>
