Working on adding more item inputs

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
           <input id="cancel-button" type="submit" value="Cancel">
         </form>
       </div>
-      <div id="item-form"></div>
+      <div id="item-form">
+      </div>
     </main>
     <script src="index.js"></script>
     <script src="address.js"></script>
