Changed styling so that addresses can be added with forms appearing and hidden as needed

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <input id="cancel-button" type="submit" value="Cancel">
         </form>
       </div>
-      <div id="item-form">
+      <div id="items-form">
       </div>
     </main>
     <script src="index.js"></script>
