Working on recreating items form from content of infowindow when a marker is clicked

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
       </div>
       <div id="items-form">
       </div>
+      <div id="edit-items">
+      </div>
     </main>
     <script src="index.js"></script>
     <script src="address.js"></script>
