Working on deleting a single item

--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
     <div id="title">
       <h2>Knows Pickers</h2>
       <h4>(for those who know)</h4>
-      <p>You can hover over a marker to see the items available at that address and click on the marker to load the items to the right of the map.</p>
+      <p>
+        <ol>
+          <li>
+            You can hover over a marker to see the items available at that address.
+          </li>
+          <li>
+            You can click on a marker to load the items to the right of the map.
+          </li>
+
+       </ol>
+      </p>
     </div>
     <main>
       <div id="map"></div>
