Added ability to list items available

--- a/index.html
+++ b/index.html
@@ -23,8 +23,12 @@
     </div>
     <main>
       <div id="map"></div>
-      <div id="addressButton">
+      <div id="addressButton"></div>
+      <div id="alpha-items">
+        <p>Items still available...</p>
+        <ul id="ul-items"></ul>
       </div>
+     
       <div id="form">
         <form class="form" id="create-address-form" action="#" method="post">
           <h4>Fill Out the Form Below:</h4>
